--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda">Eda Using Python<br />
+										<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb">Eda Using Python<br />
 										</h2>
 									</header>
-									<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda" class="image fit"><img src="images/firmbee-com-jrh5lAq-mIs-unsplash.jpg" alt="" /></a>
+									<a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb" class="image fit"><img src="images/firmbee-com-jrh5lAq-mIs-unsplash.jpg" alt="" /></a>
 									<p>I did an Exploratory Data Analysis on the Telecom Churn Data to get insights about the customers who churned</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda" class="button">View Project</a></li>
+										<li><a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
