Added Web Page for Covid-19 Dashboard

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 								</header>
 								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19" class="image main"><img src="images/photo-1583324113626-70df0f4deaab.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19" class="button large">View Project</a></li>
+									<li><a href="./covid-19.html" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/reportEmbed?reportId=bff15cf5-88cc-4be5-af93-c2a1ff93eb84&autoAuth=true&ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWluZGlhLWNlbnRyYWwtYS1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
@@ -69,13 +70,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb">Eda Using Python<br />
+										<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda">Eda Using Python<br />
 										</h2>
 									</header>
-									<a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb" class="image fit"><img src="images/firmbee-com-jrh5lAq-mIs-unsplash.jpg" alt="" /></a>
+									<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda" class="image fit"><img src="images/firmbee-com-jrh5lAq-mIs-unsplash.jpg" alt="" /></a>
 									<p>I did an Exploratory Data Analysis on the Telecom Churn Data to get insights about the customers who churned</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Soumik-Chandra/Portfolio_Website/blob/main/Eda/Churn%20Analysis%20-%20EDA.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Eda" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
