--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 									
 									<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19">Power Bi Dashboard<br />
 									</a></h2>
-									<p> In this project I  explored and analyzed Covid-19 cases, death count and vaccinations globally as well as for India and created a Dashboard on it <br />
+									<p> In this project I explored and analyzed Covid-19 cases, death count and vaccinations globally as well as for India and created a Dashboard on it <br />
 									<br />
 									</p>
 								</header>
 								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19" class="image main"><img src="images/photo-1583324113626-70df0f4deaab.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="./covid-19.html" class="button large">View Project</a></li>
-									<li><a href="https://app.powerbi.com/reportEmbed?reportId=bff15cf5-88cc-4be5-af93-c2a1ff93eb84&autoAuth=true&ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWluZGlhLWNlbnRyYWwtYS1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9" class="button large">View Dashboard</a></li>
+									<li><a href="https://app.powerbi.com/links/bray3W7WPT?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
