Added Web Page for Olympics Dashboard

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 					<div id="main">
 
 						<!-- Featured Post -->
+
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19">Power Bi Dashboard<br />
+									<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19">Covid-19 Dashboard<br />
 									</a></h2>
 									<p> In this project I explored and analyzed Covid-19 cases, death count and vaccinations globally as well as for India and created a Dashboard on it <br />
 									<br />
@@ -62,6 +63,22 @@
 								<ul class="actions special">
 									<li><a href="./covid-19.html" class="button large">View Project</a></li>
 									<li><a href="https://app.powerbi.com/links/bray3W7WPT?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
+								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									
+									<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Olympic Dashboard">Olympics Dashboard<br />
+									</a></h2>
+									<p> In this project I explored and analyzed the Olympic dataset to create a dashboard which will give summarized information regarding the history of olympics till 2016 Rio Olympics. <br />
+									<br />
+									</p>
+								</header>
+								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Olympic Dashboard" class="image main"><img src="images/Tokyo-Olympics-2021.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="./olympics.html" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/links/Az6lwl70QQ?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
