Added Web Page for Sales and Ranking Dashboard

--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
 								</ul>
 							</article>
 
+							<article class="post featured">
+								<header class="major">
+									
+									<h2><a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Sales And Ranking Dashboard">Sales And Ranking Dashboard<br />
+									</a></h2>
+									<p> In this project I explored and analyzed the dataset to create a dashboard which will give information about Revenue in the timeframe of 2019 to 2021. Also to get details about the Salesperson,who has performed well and generated good revenue in these years. <br />
+									<br />
+									</p>
+								</header>
+								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Sales And Ranking Dashboard" class="image main"><img src="images/preview.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="./Sales.html" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/links/WY4ShP3u8_?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
+								</ul>
+							</article>
+
 						<!-- Posts -->
 							<section class="posts">
 								<article>
