Added image for Sales and Ranking Dashboard

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<br />
 									</p>
 								</header>
-								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Sales And Ranking Dashboard" class="image main"><img src="images/preview.jpg" alt="" /></a>
+								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Sales And Ranking Dashboard" class="image main"><img src="images/Sales.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="./Sales.html" class="button large">View Project</a></li>
 									<li><a href="https://app.powerbi.com/links/WY4ShP3u8_?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
