Added Public Dashboard Links in Website

--- a/Sales.html
+++ b/Sales.html
@@ -36,7 +36,7 @@
                                     </p>
                                 
                                 <h3>Dashboard Link</h3>
-                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/links/WY4ShP3u8_?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare">here</a></p>
+                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/view?r=eyJrIjoiMWRmODkyZjktMmQ4Yi00Njc4LWFlNWUtNjg5NTMzOTRmZTQ4IiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9">here</a></p>
                                     
                                 <h3>Steps followed in creation of Dashboard</h3>
                                     <p>
