--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Covid-19" class="image main"><img src="images/photo-1583324113626-70df0f4deaab.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="./covid-19.html" class="button large">View Project</a></li>
-									<li><a href="https://app.powerbi.com/links/bray3W7WPT?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZTM4OTBjNWUtZDM4Yi00MDcxLTgzMjktNWMzNTdmODRmMThiIiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
@@ -78,7 +78,7 @@
 								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Olympic Dashboard" class="image main"><img src="images/Tokyo-Olympics-2021.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="./olympics.html" class="button large">View Project</a></li>
-									<li><a href="https://app.powerbi.com/links/Az6lwl70QQ?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiMDk0Yzk1ZDItMGIxYi00YmNlLTljZDAtNDBiNmI5OTc0ZmU3IiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
@@ -94,7 +94,7 @@
 								<a href="https://github.com/Soumik-Chandra/Portfolio_Website/tree/main/Sales And Ranking Dashboard" class="image main"><img src="images/Sales.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="./Sales.html" class="button large">View Project</a></li>
-									<li><a href="https://app.powerbi.com/links/WY4ShP3u8_?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare" class="button large">View Dashboard</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiMWRmODkyZjktMmQ4Yi00Njc4LWFlNWUtNjg5NTMzOTRmZTQ4IiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9" class="button large">View Dashboard</a></li>
 								</ul>
 							</article>
 
