--- a/olympics.html
+++ b/olympics.html
@@ -38,7 +38,7 @@
                                     <p><a href="www.Kaggle.com">www.Kaggle.com</a></p> 
 
                                 <h3>Dashboard Link</h3>
-                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/links/Az6lwl70QQ?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare">here</a>. The data is updated till 2016 Rio Olympics.</p>
+                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/view?r=eyJrIjoiMDk0Yzk1ZDItMGIxYi00YmNlLTljZDAtNDBiNmI5OTc0ZmU3IiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9">here</a>. The data is updated till 2016 Rio Olympics.</p>
                                     
                                 <h3>Steps followed in creation of Dashboard</h3>
                                     <p>
