--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 						<ul class="icons alt">
 							<li><a href="https://www.linkedin.com/in/soumik-chandra-20a418136/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							
+							<li><a href="https://github.com/Soumik-Chandra" class="icon brands alt fa-github"><span class="label">github</span></a></li>
 						</ul>
 					</nav>
 
@@ -182,7 +182,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/soumik-chandra-20a418136/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									
+									<li><a href="https://github.com/Soumik-Chandra" class="icon brands alt fa-github"><span class="label">github</span></a></li>
 								</ul>
 							</section>
 						</section>
